--- a/home.html
+++ b/home.html
@@ -10,5 +10,6 @@
     <h1>Histórias de terror brasileiras</h1>
     <p>Ao longo dos 520 anos de idade do Brasil foram sendo criadas centenas de histórias, contos, mitos que se perduram até os dias de hoje, histórias de terror como a loura do banheiro ou da mula sem cabeça, quem nunca ouviu falar não é mesmo?. Abaixo você irá ler algumas das histórias mais tenebrosas já contadas da literatura nacional. </p>
    <p>Apertando<a href="index.html"> aqui </a>você tera acesso as histórias de terror da literatura brasileira.</p>
+    <p>Clique<a href="sobre.html"> aqui </a> para saber um pouco sobre nós</p>
 </body>
 </html>
