--- a/sobre.html
+++ b/sobre.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt">
 <head>
-  <meta charset="UFT-8>
+  <meta charset="UFT-8">
   <title>sobre nós</title>
 </head>
 <body>
