--- a/index.html
+++ b/index.html
@@ -39,6 +39,20 @@
         Até hoje há relatos tanto de professores quanto alunos de ouvirem o piano tocar, mesmo sem ninguém a manuseá-lo, ou até mesmo de torneiras abrindo-se aparentemente sozinhas, sendo tal fato associado à uma sede do suposto espírito de Maria Augusta que morrera desidratada.
         Será Maria Augusta de Oliveira um espírito preso à escola? Algum ser se transpassando por ela? Ou apenas uma lenda urbana? Enfim, essa é uma resposta que eu não tenho.
         </p>
+    
+    <h2>Filho mata pais e deixa cena do crime macabra antes de cometer suicídio</h2>
+    <p>Na madrugada de 4 de agosto de 2021, em Vila Velha (ES), no bairro Itapuã, um estudante de medicina de 22 anos é suspeito de assassinar seus pais antes de cometer suicídio. 
+        Guilherme Heringer Cesar consumou o crime num cenário que sugere ter se tratado de um ritual.As vítimas foram Paulo de Oliveira Cesar, 68, médico urologista e pastor, 
+        e Raquel Heringer Cesar, 61, formada em Educação Física. Foram assassinados com uma faca. O corpo do pai foi achado atrás da porta do banheiro, enquanto o da mãe estava
+        em cima da cama coberto por lençóis.
+    </p>
+    <p>Um familiar informou que, logo após matar os pais, o suspeito ligou para ele e confessou o ato e, antes de desligar, informou que tiraria a própria a vida 
+        – e assim o fez. Às 4h30, a polícia foi acionada para investigar a residência, onde encontrou os dois cadáveres.Os vizinhos interrogados disseram que eram uma família 
+        extraordinária, e descreveram Guilherme como um jovem comum; contudo, as evidências no apartamento indicam que ele teria praticado algum tipo de ritual para satisfazer 
+        uma entidade: “ele me obrigou”, escreveu numa bíblia.Além disso, cinzas foram espalhadas pelas páginas da bíblia. Na residência, também foram encontradas garrafas 
+        vazias de cerveja, vinho e embalagens de cigarro. A arma utilizada no crime foi apreendida e os corpos encaminhados ao Departamento Médico Legal. O corpo de 
+        Guilherme foi encontrado na Terceira Ponte, entre Vitória e Vila Velha.
+    </p>
 
        <p>Volte para a primeira página apertando <a href="home.html"> aqui</a></p>
     <h2> Fontes </h2>
