Update and rename anexo.html to sobre.html

--- a/sobre.html
+++ b/sobre.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Contos e Historias do terror brasileiro</h1>
 
-    <p>Detro de um mar de infinidades de histórias de terror do Brasil escolhemos a loira do banheiro ,a emparedada da rua nova e ... pelo motivo de serem histórias que realmete nos fazem ter medo </p>
+    <p>Detro de um mar de infinidades de histórias de terror do Brasil escolhemos a loira do banheiro ,a emparedada da rua nova e um caso criminal do Espírito Santo pelo motivo de serem histórias que realmete nos fazem ter medo </p>
 </body>
 </html>
