--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Histórias de terror brasileiras</h1>
     <p>Ao longo dos 520 anos de idade do Brasil foram sendo construídas centenas de histórias, contos, mitos que se perduram até os dias de hoje, histórias de terror como a loura do banheiro ou da mula sem cabeça, quem nunca ouviu falar não é mesmo? Abaixo você irá ler algumas das histórias mais tenebrosas que se contiveram ou não aos limites da imaginação. </p>
-   <p>Apertando<a href="index.html"> aqui </a>você tera acesso as histórias de terror da literatura brasileira.</p>
-    <p>Clique<a href="sobre.html"> aqui </a> para saber um pouco sobre nós</p>
+   <p>Apertando<a href="terrorbrasileiro.html"> aqui </a>você tera acesso as histórias de terror nacionais.</p>
+    <p>Clique<a href="contatos.html"> aqui </a> para saber um pouco sobre nós</p>
 </body>
 </html>
