--- a/sobre.html
+++ b/sobre.html
@@ -10,5 +10,6 @@
     <h1>Contos e Historias do terror brasileiro</h1>
 
     <p>Detro de um mar de infinidades de histórias de terror do Brasil escolhemos a loira do banheiro, a emparedada da rua nova e um caso criminal do Espírito Santo pelo motivo de serem histórias que realmete nos fazem ter medo </p>
+    <p>Clique<a href="index.html"> aqui </a> para retornar à página inicial.</p>
 </body>
 </html>
