--- a/contatos.html
+++ b/contatos.html
@@ -9,6 +9,7 @@
   <p>Os idealizadores desse site são os alunos Andrey Vasconcelos Coutinho, Ayrton Lopes Azevêdo dos Santos e Gabriel Silva Aguiar, alunos do 2º Ano do ensino médio integrado em 
   informática do IFPB (Instituto Federal da Paraíba)<br>Para contato temos os seguintes e-mails:</p>
   <p>Andrey Vasconcelos Coutinho: <a href="andrey.vasconcelos@academico.ifpb.edu.br">andrey.vasconcelos@academico.ifpb.edu.br</a><br>Ayrton Lopes Azevêdo dos Santos: <a href="ayrton.lopes@academico.ifpb.edu.br">ayrton.lopes@academico.ifpb.edu.br</a><br>Gabriel Silva Aguiar: <a href="silva.aguiar@academico.ifpb.edu.br">silva.aguiar@academico.ifpb.edu.br</a></p>
+  <p>Clique<a href="index.html"> aqui </a> para retornar à página inicial.</p>
  </body>
  </html>
  
