--- a/contatos.html
+++ b/contatos.html
@@ -4,7 +4,7 @@
   <meta charset="UFT-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>sobre nós</title>
+  <title>Sobre nós</title>
 </head>
 <body>
   <h1>Sobre os idealizadores</h1>
