--- a/contatos.html
+++ b/contatos.html
@@ -4,14 +4,57 @@
   <meta charset="UFT-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="contatos.css" media="screen">
   <title>Sobre nós</title>
 </head>
 <body>
-  <h1>Sobre os idealizadores</h1>
+  <h1 id="titulo">Sobre os idealizadores</h1>
+  <br>
   <p>Os idealizadores desse site são os alunos Andrey Vasconcelos Coutinho, Ayrton Lopes Azevêdo dos Santos e Gabriel Silva Aguiar, alunos do 2º Ano do ensino médio integrado em 
   informática do IFPB (Instituto Federal da Paraíba)<br>Para contato temos os seguintes e-mails:</p>
-  <p>Andrey Vasconcelos Coutinho: <a href="andrey.vasconcelos@academico.ifpb.edu.br">andrey.vasconcelos@academico.ifpb.edu.br</a><br>Ayrton Lopes Azevêdo dos Santos: <a href="ayrton.lopes@academico.ifpb.edu.br">ayrton.lopes@academico.ifpb.edu.br</a><br>Gabriel Silva Aguiar: <a href="silva.aguiar@academico.ifpb.edu.br">silva.aguiar@academico.ifpb.edu.br</a></p>
+  <br>
+  <p>Andrey Vasconcelos Coutinho: <a href="andrey.vasconcelos@academico.ifpb.edu.br">andrey.vasconcelos@academico.ifpb.edu.br</a><br>Ayrton Lopes Azevêdo dos Santos: <a href="ayrton.lopes@academico.ifpb.edu.br">ayrton.lopes@academico.ifpb.edu.br</a><br>Gabriel Silva Aguiar: <br><a href="silva.aguiar@academico.ifpb.edu.br">silva.aguiar@academico.ifpb.edu.br</a></p>
+  <br>
+  <p>Ou se preferir, contate-nos preenchendo o formulário a seguir:</p>
+  <br>
+  <form>
+    <fieldset id="formulário">
+      <div class="campo">
+        <label for="nome"><strong>Nome Completo</strong></label>
+      <input type="text" name="nome" id="nome" required>
+      </div>
+
+      <div class="campo">
+        <label for="email"><strong>Email</strong></label>
+        <input type="email" name="email" id="email" required>
+      </div>
+
+      <div class="campo">
+        <label for="typAssuntos"><strong>Assunto</strong></label>
+        <select id="typAssuntos">
+          <option>Elogio</option>
+          <option>Reclamação</option>
+          <option>Sugestão</option>
+        </select>
+      </div>
+
+      <div class="campo">
+        <label for="titulo"><strong>Título do Assunto</strong></label>
+        <input type="text" name="titulo" id="titulo">
+      </div>
+
+      <div class="campo">
+        <label for="mensagem"><strong>Sua mensagem</strong></label>
+        <textarea row="10" style="width: 26em" id="mensagem" name="mensagem" required></textarea>
+      </div>
+      <br>
+      <button class="botao" type="submit">Enviar</button>
+    </fieldset>
+  </form>
+  <br>
   <p>Clique<a href="index.html"> aqui </a> para retornar à página inicial.</p>
+  
+  
+  
  </body>
  </html>
- 
