--- a/contatos.html
+++ b/contatos.html
@@ -4,21 +4,26 @@
   <meta charset="UFT-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="contatos.css" media="screen">
+  <link rel="stylesheet" type="text/css" href="layout.css" media="screen">
   <title>Sobre nós</title>
 </head>
 <body>
   <h1 id="titulo">Sobre os idealizadores</h1>
   <br>
-  <p>Os idealizadores desse site são os alunos Andrey Vasconcelos Coutinho, Ayrton Lopes Azevêdo dos Santos e Gabriel Silva Aguiar, alunos do 2º Ano do ensino médio integrado em 
-  informática do IFPB (Instituto Federal da Paraíba)<br>Para contato temos os seguintes e-mails:</p>
+  <p class="parágrafo_de_contato">Os idealizadores desse site são os alunos Andrey Vasconcelos Coutinho, Ayrton Lopes Azevêdo dos Santos e Gabriel Silva Aguiar, alunos do 2º Ano do ensino médio integrado em 
+  informática do IFPB (Instituto Federal da Paraíba)</p>
+  <p class="parágrafo_de_contato"><br>Para contato temos os seguintes e-mails:</p>
   <br>
-  <p>Andrey Vasconcelos Coutinho: <a href="andrey.vasconcelos@academico.ifpb.edu.br">andrey.vasconcelos@academico.ifpb.edu.br</a><br>Ayrton Lopes Azevêdo dos Santos: <a href="ayrton.lopes@academico.ifpb.edu.br">ayrton.lopes@academico.ifpb.edu.br</a><br>Gabriel Silva Aguiar: <br><a href="silva.aguiar@academico.ifpb.edu.br">silva.aguiar@academico.ifpb.edu.br</a></p>
+  <ul class="lista_email"><address>
+    <li>Andrey Vasconcelos Coutinho: <br><a class="linkscolor_contatos" href="andrey.vasconcelos@academico.ifpb.edu.br">andrey.vasconcelos@academico.ifpb.edu.br</a></li>
+    <li>Ayrton Lopes Azevêdo dos Santos: <br><a class="linkscolor_contatos" href="ayrton.lopes@academico.ifpb.edu.br">ayrton.lopes@academico.ifpb.edu.br</a></li>
+    <li>Gabriel Silva Aguiar: <br><a class="linkscolor_contatos" href="silva.aguiar@academico.ifpb.edu.br">silva.aguiar@academico.ifpb.edu.br</a></li>
+  </address></ul> 
   <br>
-  <p>Ou se preferir, contate-nos preenchendo o formulário a seguir:</p>
+  <p class="parágrafo_de_contato">Ou se preferir, contate-nos preenchendo o formulário a seguir:</p>
   <br>
   <form>
-    <fieldset id="formulário">
+    <fieldset id="formulario">
       <div class="campo">
         <label for="nome"><strong>Nome Completo</strong></label>
       <input type="text" name="nome" id="nome" required>
@@ -40,7 +45,7 @@
 
       <div class="campo">
         <label for="titulo"><strong>Título do Assunto</strong></label>
-        <input type="text" name="titulo" id="titulo">
+        <input id="" type="text" name="titulo" id="titulo">
       </div>
 
       <div class="campo">
@@ -52,7 +57,7 @@
     </fieldset>
   </form>
   <br>
-  <p>Clique<a href="index.html"> aqui </a> para retornar à página inicial.</p>
+  <p id="retorno_contatos">Clique <a class="linkscolor_contatos" href="index.html">aqui</a> para retornar à página inicial.</p>
   
   
   
