--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
-<!DOCTYPE html>
+<!<!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="layout.css" media="screen">
     <title>Home</title>
 </head>
-<body>
-    <h1>Histórias de terror brasileiras</h1>
-    <p>Ao longo dos 520 anos de idade do Brasil foram sendo construídas centenas de histórias, contos, mitos que se perduram até os dias de hoje, histórias de terror como a loura do banheiro ou da mula sem cabeça, quem nunca ouviu falar não é mesmo? Abaixo você irá ler algumas das histórias mais tenebrosas que se contiveram ou não aos limites da imaginação. </p>
-   <p>Apertando<a href="terrorbrasileiro.html"> aqui </a>você tera acesso as histórias de terror nacionais.</p>
-    <p>Clique<a href="sobre.html"> aqui </a> para saber um pouco sobre o projeto e<a href="contatos.html"> aqui </a> para saber mais sobre nós.</p>
+<body id="index_style">
+    <h1 class="titulo_index">Histórias de terror brasileiras</h1><br>
+    <p>Ao longo dos 520 anos de idade do Brasil foram sendo construídas centenas de histórias, contos, mitos que se perduram até os dias de hoje, histórias de terror como a loura do banheiro ou da mula sem cabeça, quem nunca ouviu falar não é mesmo? Abaixo você irá ler algumas das histórias mais tenebrosas que se contiveram ou não aos limites da imaginação. </p><br>
+   <p>Nos links a seguir você terá acesso às seguintes páginas:</p><br>
+   <nav id="space">
+   <a class="linkscolor_index" href="sobre.html">sobre</a>
+   <a class="linkscolor_index" href="terrorbrasileiro.html">casos</a>
+   <a class="linkscolor_index" href="contatos.html">contato</a> 
+    </nav> 
 </body>
 </html>
