--- a/sobre.html
+++ b/sobre.html
@@ -4,12 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="layout.css" media="screen">
     <title>Contos e historias do terror brasileiro</title>
 </head>
-<body>
+<body id="sobre_layout">
     <h1>Contos e Historias do terror brasileiro</h1>
 
     <p>Detro de um mar de infinidades de histórias de terror do Brasil escolhemos a loira do banheiro, a emparedada da rua nova e um caso criminal do Espírito Santo pelo motivo de serem histórias que realmete nos fazem ter medo </p>
-    <p>Clique<a href="index.html"> aqui </a> para retornar à página inicial.</p>
+    <table class="tabela_sobre";>
+        <tr>
+            <th scope="col" colspan="2">Sejam bem-vindos a uma noite de pesadelos</th><br>
+        </tr>
+        <tr>
+            <th scope="row">Retorne a escuridão do início</th><br>
+            <td><a class="linkscolor" href="index.html"> Home </a</td>
+        </tr>
+        <tr>
+            <th scope="row">Vá para o castelo onde os fantasmas confundem até a própria realidade</th><br>
+            <td><a class="linkscolor" href="terrorbrasileiro.html"> Artigos </a</td><br>
+        </tr>
+        <tr class="tabela_sobre">
+            <th scope="row">Livro dos condenados</th><br>
+            <td><a class="linkscolor" href="contatos.html"> Contato </a</td><br>
+        </tr>
+
+    </table>
+    <nav></nav>
+        <p>Clique<a href="index.html"> aqui </a> para retornar à página inicial.</p>
 </body>
 </html>
