--- a/terrorbrasileiro.html
+++ b/terrorbrasileiro.html
@@ -12,7 +12,7 @@
     
     <section class="artigos1">
         
-        <h1>A Emparedada da Rua Nova</h1>
+        <h1>A Emparedada da Rua Nova</h1><br>
 
             <img class="alinharimagens" src="imagens/emparedadadaruanova.jpeg" alt="Cadáver feminino descoberto atráw de parede"><br>
 
@@ -84,7 +84,7 @@
 
         <h2>Se você sentiu mais interesse, acesse:</h2>
 
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/3cXBmVTObco" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/q_TAX8VUKO4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>br>
 
         <h2> Fontes </h2>
             <ul><address>
@@ -96,7 +96,7 @@
 
     <section class="artigos3">
 
-        <h1>Filho mata pais e deixa cena do crime macabra antes de cometer suicídio</h1>
+        <h1>Filho mata pais e deixa cena do crime macabra antes de cometer suicídio</h1><br>
             <img  class="alinharimagens" src="imagens/casodesucídio.jpeg" alt="Imagem com símbolos satanistas"><br>
 
             <p>
