--- a/sobre.html
+++ b/sobre.html
@@ -8,28 +8,38 @@
     <title>Contos e historias do terror brasileiro</title>
 </head>
 <body id="sobre_layout">
-    <h1>Contos e Historias do terror brasileiro</h1>
-
-    <p>Detro de um mar de infinidades de histórias de terror do Brasil escolhemos a loira do banheiro, a emparedada da rua nova e um caso criminal do Espírito Santo pelo motivo de serem histórias que realmete nos fazem ter medo </p>
-    <table class="tabela_sobre";>
-        <tr>
-            <th scope="col" colspan="2">Sejam bem-vindos a uma noite de pesadelos</th><br>
-        </tr>
-        <tr>
-            <th scope="row">Retorne a escuridão do início</th><br>
-            <td><a class="linkscolor" href="index.html"> Home </a</td>
-        </tr>
-        <tr>
-            <th scope="row">Vá para o castelo onde os fantasmas confundem até a própria realidade</th><br>
-            <td><a class="linkscolor" href="terrorbrasileiro.html"> Artigos </a</td><br>
-        </tr>
-        <tr class="tabela_sobre">
-            <th scope="row">Livro dos condenados</th><br>
-            <td><a class="linkscolor" href="contatos.html"> Contato </a</td><br>
-        </tr>
+    <h1 class="sobrecontos">Contos e Historias do terror brasileiro</h1>
+    <br>
+    <br>
+    <p>Dentro de um mar de infinidades de histórias de terror do Brasil escolhemos a loira do banheiro, a emparedada da rua nova e um caso criminal do Espírito Santo pelo motivo de serem histórias que realmete nos fazem ter medo </p>
+    <table border="1" width='40%' class="tabela_sobre";>
+        <thead>
+            <tr class="tabela_sobre">
+                <caption scope="col" colspan="2"><strong>Sejam bem-vindos a uma noite de pesadelos</strong></caption>
+                <br>
+            </tr>
+        </thead>
+        <tbody>
+            <tr id="tabela_sobre">
+                <th scope="row">Retorne a escuridão do início</th><br>
+                <td><a class="linkscolor_sobre" href="index.html"> Home </a</td>
+            </tr>
+            <tr class="tabela_sobre">
+                <th scope="row">Vá para o castelo onde os fantasmas confundem até a própria realidade</th><br>
+                <td><a class="linkscolor_sobre" href="terrorbrasileiro.html"> Artigos </a</td><br>
+            </tr>
+        </tbody> 
+        <tfoot>
+            <tr class="tabela_sobre">
+                <th scope="row">Livro dos condenados</th><br>
+                <td><a class="linkscolor_sobre" href="contatos.html"> Contato </a</td><br>
+            </tr>
+        </tfoot>
+        
 
     </table>
-    <nav></nav>
-        <p>Clique<a href="index.html"> aqui </a> para retornar à página inicial.</p>
+    <br>
+    <br>
+    <p id="clicaraki">Clique<a class="linkscolor_sobre" href="index.html"> aqui </a> para retornar à página inicial.</p>
 </body>
 </html>
