--- a/sobre.html
+++ b/sobre.html
@@ -37,9 +37,7 @@
         </tfoot>
         
 
-    </table>
-    <br>
-    <br>
-    <p id="clicaraki">Clique<a class="linkscolor_sobre" href="index.html"> aqui </a> para retornar à página inicial.</p>
+    </table><br>
+   
 </body>
 </html>
